updated auth-service and frontend api call