@@ -6,32 +6,34 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
     @Bean
     public CorsWebFilter corsWebFilter() {
+
         CorsConfiguration config = new CorsConfiguration();
 
-        // Allow sending cookies
-        config.setAllowCredentials(true);
+        config.setAllowCredentials(false); // ✅ important
 
-        // Explicitly allow your frontend origins (dev + ngrok)
-        config.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",
-             "http://localhost:8080"
-            // "https://6498284c8db9.ngrok-free.app"
+        config.setAllowedOrigins(List.of(
+                "http://localhost:3000"
         ));
 
-        config.setAllowedHeaders(Arrays.asList("*"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type"
+        ));
 
-        // Expose cookie header to browser
-        config.addExposedHeader("Set-Cookie");
+        config.setAllowedMethods(List.of(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        ));
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+
         source.registerCorsConfiguration("/**", config);
 
         return new CorsWebFilter(source);
